add columns html and add styles and add a README

--- a/columns.html
+++ b/columns.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/styles2.css" type="text/css">
+    <title>Columns</title>
   </head>
+  <body>
+    <h1>Check out these columns</h1>
+    <div class="column"><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt veritatis temporibus neque alias? Ipsa recusandae quod ipsum aliquam quis voluptatem eum quae nostrum ullam quia optio, reiciendis tempore exercitationem architecto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste cum tempora similique illum ipsa omnis deserunt nemo, maiores, dolores facilis aut quibusdam. Laudantium fugiat est quidem officia saepe ipsam officiis! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis nesciunt corporis voluptatem ducimus tempore eius quis ipsam explicabo dolore maiores! A voluptate sunt ipsum amet atque eius autem? Assumenda, vitae?
+    </p></div>
+    <div class="column">
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt veritatis temporibus neque alias? Ipsa recusandae quod ipsum aliquam quis voluptatem eum quae nostrum ullam quia optio, reiciendis tempore exercitationem architecto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste cum tempora similique illum ipsa omnis deserunt nemo, maiores, dolores facilis aut quibusdam. Laudantium fugiat est 
+      </p>
+    </div>
+    <div class="column">
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt veritatis temporibus neque alias? Ipsa recusandae quod ipsum aliquam quis voluptatem eum quae nostrum ullam quia optio, reiciendis tempore exercitationem architecto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste cum tempora similique illum ipsa omnis deserunt nemo, maiores, dolores facilis aut quibusdam. Laudantium fugiat est quidem officia saepe ipsam officiis! Lorem ipsum dolor sit amet, consectetur adipisicing elit
+      </p>
+    </div>
+      
+  </body>
 </html>
